# covid-optimisation

./: CITATION.cff  README.md
model-implementation/: CMakeLists.txt
model-implementation/src/: TestLabAssignmentInstance.cpp  TestLabAssignmentInstance.h  TestLabAssignmentSolution.cpp  TestLabAssignmentSolution.h  TestLabAssignmentSolver.cpp  TestLabAssignmentSolver.h  main.cpp
swab-tests-data/italy-case-study/: instance-generator.py  italy_factories_coords.csv  italy_labs_coords.csv
swab-tests-data/synthetic-data/: instance-generator.py
